--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
       bottom: 5px;
       left: 50%;
       transform: translateX(-50%);
-      /* transform: translateX(50%, -50%); */
       background-color: rgba(0, 0, 0, 0.5);
       padding: 3px 5px;
       font-size: 12px;
@@ -68,11 +67,18 @@
   <section id="practicalWork1">
     <h2>Practical Work #1</h2>
 
-    <div class="block" onclick="window.location.href='Three.js/practical_work_1/PW1_ex1+2.html'">
+    <div class="block" onclick="window.location.href='Three.js/practical_work_1/PW1_ex1.html'">
       <video autoplay muted loop>
-        <source src="Three.js/practical_work_1/pw1_1+2.mov" type="video/mp4">
+        <source src="Three.js/practical_work_1/pw1_1.mov" type="video/mp4">
       </video>
-      <div class="block-title">Task 1&2</div>
+      <div class="block-title">Task 1</div>
+    </div>
+
+    <div class="block" onclick="window.location.href='Three.js/practical_work_1/PW1_ex2.html'">
+      <video autoplay muted loop>
+        <source src="Three.js/practical_work_1/pw1_2.mov" type="video/mp4">
+      </video>
+      <div class="block-title">Task 2</div>
     </div>
 
     <div class="block" onclick="window.location.href='Three.js/practical_work_1/PW1_ex3.html'">
