--- a/Three.js/practical_work_1/PW1_ex1.html
+++ b/Three.js/practical_work_1/PW1_ex1.html
@@ -45,7 +45,7 @@
     const canvas = document.querySelector('#c');
 
     const renderer = new THREE.WebGLRenderer(
-      {antialias: true, canvas}
+      { antialias: true, canvas }
     );
 
     renderer.setSize(window.innerWidth, window.innerHeight);
@@ -79,37 +79,46 @@
     // const axesHelper = new THREE.AxesHelper(100);
     // scene.add(axesHelper);
 
-    const numMarksX = Math.floor(window.innerWidth / 20);
-    const numMarksY = Math.floor(window.innerHeight / 20);
+    const xOffset = 0;
+    const zOffset = 0;
+    const spacing = 10;
+    const gridRows = 50;
 
-    for (let i = -numMarksX; i < numMarksX; i++) {
-      for (let j = -numMarksY; j < numMarksY; j++) {
-        createMarks(i * 5, -50 , j * 5);
+    for (let x = -gridRows / 2; x < gridRows; x++) {
+      for (let z = -gridRows / 2; z < gridRows; z++) {
+        createMarks(xOffset + x * spacing, zOffset + z * spacing, spacing / 3, xOffset, zOffset);
       }
     }
-    
-    for (let i = 0; i < 3; ++i) {
-      createAllPrimitives(i * 30);
-    }
 
-    function createMarks(x, y, z) {
-      const material = new THREE.LineBasicMaterial({
+    function createMarks(x, z, size, xOffset, zOffset) {
+      const opacity = calculateOpacity(x, z, xOffset, zOffset);
+      const lineMaterial = new THREE.LineBasicMaterial({
         color: 0xffffff,
         transparent: true,
+        opacity: opacity
       });
-      const points = [];
-      points.push(new THREE.Vector3(-1, 0, 0));
-      points.push(new THREE.Vector3(1, 0, 0));
-      points.push(new THREE.Vector3(0, 0, -1));
-      points.push(new THREE.Vector3(0, 0, 1));
-      const geometry =
-        new THREE.BufferGeometry().setFromPoints(points);
-      const line = new THREE.LineSegments(
-        geometry,
-        material
-      );
-      line.position.set(x, y, z);
+
+      createCross(x - size / 2, x + size / 2, z, -50, z, lineMaterial);
+      createCross(x, x, z - size / 2, -50, z + size / 2, lineMaterial);
+    }
+
+    function createCross(startX, endX, startZ, y, endZ, material) {
+      const points = [
+        new THREE.Vector3(startX, y, startZ),
+        new THREE.Vector3(endX, y, endZ)
+      ];
+      const lineGeometry = new THREE.BufferGeometry().setFromPoints(points);
+      const line = new THREE.Line(lineGeometry, material);
       scene.add(line);
+    }
+
+    function calculateOpacity(x, z, xOffset, zOffset) {
+      const distance = Math.sqrt((x - xOffset) ** 2 + (z - zOffset) ** 2);
+      return 1 - distance / 150;
+    }
+
+    for (let i = 0; i < 3; ++i) {
+      createAllPrimitives(i * 30);
     }
 
     function addPrimitives(geometry, x, y, z) {
@@ -572,8 +581,8 @@
     function resizeRendererToDisplaySize(renderer) {
       const canvas = renderer.domElement;
       const pixelRatio = window.devicePixelRatio;
-      const width  = Math.floor( canvas.clientWidth  * pixelRatio );
-      const height = Math.floor( canvas.clientHeight * pixelRatio );
+      const width = Math.floor(canvas.clientWidth * pixelRatio);
+      const height = Math.floor(canvas.clientHeight * pixelRatio);
       const needResize = canvas.width !== width || canvas.height !== height;
       if (needResize) {
         renderer.setSize(width, height, false);
@@ -582,7 +591,7 @@
     }
 
     const geometry = new THREE.BoxGeometry(1, 1, 1);
-    const material = new THREE.MeshBasicMaterial({color: 0x44aa88});
+    const material = new THREE.MeshBasicMaterial({ color: 0x44aa88 });
     const cube = new THREE.Mesh(geometry, material);
     scene.add(cube);
 
@@ -597,7 +606,7 @@
 
       scene.traverse(object => {
         if (object instanceof THREE.Mesh) {
-            object.rotation.x = time; // Adjust the rotation speed as needed
+          object.rotation.x = time; // Adjust the rotation speed as needed
         }
       });
 
