--- a/Three.js/practical_work_1/PW1_ex4.html
+++ b/Three.js/practical_work_1/PW1_ex4.html
@@ -61,7 +61,7 @@
       0.1,
       1000
     );
-    camera.position.set(50, 50, 150);
+    camera.position.set(-100, 50, 150);
 
     var renderer = new THREE.WebGLRenderer({ antialias: true });
 
@@ -75,8 +75,8 @@
     );
 
     // AXES helper
-    const axesHelper = new THREE.AxesHelper(100);
-    scene.add(axesHelper);
+    // const axesHelper = new THREE.AxesHelper(100);
+    // scene.add(axesHelper);
 
     // Body
     const body = {
