--- a/index.html
+++ b/index.html
@@ -71,35 +71,35 @@
       <video autoplay muted loop>
         <source src="Three.js/practical_work_1/pw1_1.mov" type="video/mp4">
       </video>
-      <div class="block-title">Task 1</div>
+      <div class="block-title">Ex.1</div>
     </div>
 
     <div class="block" onclick="window.location.href='Three.js/practical_work_1/PW1_ex2.html'">
       <video autoplay muted loop>
         <source src="Three.js/practical_work_1/pw1_2.mov" type="video/mp4">
       </video>
-      <div class="block-title">Task 2</div>
+      <div class="block-title">Ex.2</div>
     </div>
 
     <div class="block" onclick="window.location.href='Three.js/practical_work_1/PW1_ex3.html'">
       <video autoplay muted loop>
         <source src="Three.js/practical_work_1/pw1_3.mov" type="video/mp4">
       </video>
-      <div class="block-title">Task 3</div>
+      <div class="block-title">Ex.3</div>
     </div>
 
     <div class="block" onclick="window.location.href='Three.js/practical_work_1/PW1_ex4.html'">
       <video autoplay muted loop>
         <source src="Three.js/practical_work_1/pw1_4.mov" type="video/mp4">
       </video>
-      <div class="block-title">Task 4</div>
+      <div class="block-title">Ex.4</div>
     </div>
 
     <div class="block" onclick="window.location.href='Three.js/practical_work_1/PW1_ex5.html'">
       <video autoplay muted loop>
         <source src="Three.js/practical_work_1/pw1_5.mov" type="video/mp4">
       </video>
-      <div class="block-title">Task 5</div>
+      <div class="block-title">Ex.5</div>
     </div>
 
   </section>
@@ -110,49 +110,49 @@
       <video autoplay muted loop>
         <source src="Three.js/practical_work_2/pw2_1.mov" type="video/mp4">
       </video>
-      <div class="block-title">Task 1</div>
+      <div class="block-title">Ex.1</div>
     </div>
 
     <div class="block" onclick="window.location.href='Three.js/practical_work_2/PW2_ex2.html'">
       <video autoplay muted loop>
         <source src="Three.js/practical_work_2/pw2_2.mov" type="video/mp4">
       </video>
-      <div class="block-title">Task 2</div>
+      <div class="block-title">Ex.2</div>
     </div>
 
     <div class="block" onclick="window.location.href='Three.js/practical_work_2/PW2_ex3.html'">
       <video autoplay muted loop>
         <source src="Three.js/practical_work_2/pw2_3.mov" type="video/mp4">
       </video>
-      <div class="block-title">Task 3</div>
+      <div class="block-title">Ex.3</div>
     </div>
 
     <div class="block" onclick="window.location.href='Three.js/practical_work_2/PW2_ex4.html'">
       <video autoplay muted loop>
         <source src="Three.js/practical_work_2/pw2_4.mov" type="video/mp4">
       </video>
-      <div class="block-title">Task 4</div>
+      <div class="block-title">Ex.4</div>
     </div>
 
     <div class="block" onclick="window.location.href='Three.js/practical_work_2/PW2_ex5.html'">
       <video autoplay muted loop>
         <source src="Three.js/practical_work_2/pw2_5.mov" type="video/mp4">
       </video>
-      <div class="block-title">Task 5</div>
+      <div class="block-title">Ex.5</div>
     </div>
 
     <div class="block" onclick="window.location.href='Three.js/practical_work_2/PW2_ex6.html'">
       <video autoplay muted loop>
         <source src="Three.js/practical_work_2/pw2_6.mov" type="video/mp4">
       </video>
-      <div class="block-title">Task 6</div>
+      <div class="block-title">Ex.6</div>
     </div>
 
     <div class="block" onclick="window.location.href='Three.js/practical_work_2/PW2_ex7.html'">
       <video autoplay muted loop>
         <source src="Three.js/practical_work_2/pw2_7.mov" type="video/mp4">
       </video>
-      <div class="block-title">Task 7</div>
+      <div class="block-title">Ex.7</div>
     </div>
   </section>
 
