--- a/Three.js/practical_work_2/PW2_ex2.html
+++ b/Three.js/practical_work_2/PW2_ex2.html
@@ -23,6 +23,8 @@
 </head>
 
 <body>
+  <canvas id="c"></canvas>
+
   <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
   <script type="importmap">
       {
@@ -41,27 +43,31 @@
     var scene = new THREE.Scene();
     const gui = new GUI();
 
-    const light = new THREE.AmbientLight(0xffffff, 0.5);
-    scene.add(light);
+    const pointLight = new THREE.PointLight(0xffffff, 20, 20, 1);
+    pointLight.position.set(0, 4, 4);
+    scene.add(pointLight);
 
-    var aspect = window.innerWidth / window.innerHeight;
+    // const lightHelper = new THREE.PointLightHelper(pointLight, 1);
+    // scene.add(lightHelper);
+
+    const canvas = document.querySelector('#c');
+
+    const renderer = new THREE.WebGLRenderer(
+      { antialias: true, canvas }
+    );
+
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.setPixelRatio(window.devicePixelRatio);
+    document.body.appendChild(renderer.domElement);
+
     var camera = new THREE.PerspectiveCamera(
       75,
-      aspect,
+      window.innerWidth / window.innerHeight,
       0.1,
       1000
     );
+    camera.updateProjectionMatrix();
     camera.position.set(0, 0, 20);
-
-    var renderer = new THREE.WebGLRenderer({
-      antialias: true,
-    });
-
-    renderer.setSize(
-      window.innerWidth,
-      window.innerHeight
-    );
-    document.body.appendChild(renderer.domElement);
 
     const controls = new OrbitControls(
       camera,
@@ -126,8 +132,8 @@
     }
 
     // AXES helper
-    const axesHelper = new THREE.AxesHelper(100);
-    scene.add(axesHelper);
+    // const axesHelper = new THREE.AxesHelper(100);
+    // scene.add(axesHelper);
 
     // Walls Front
     const frontBoardGeometry = new THREE.PlaneGeometry(12, 10);
@@ -243,7 +249,6 @@
 
     requestAnimationFrame(render);
 
-    // render();
   </script>
 </body>
 
