--- a/Three.js/practical_work_2/PW2_ex3.html
+++ b/Three.js/practical_work_2/PW2_ex3.html
@@ -23,6 +23,8 @@
 </head>
 
 <body>
+  <canvas id="c"></canvas>
+
   <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
   <script type="importmap">
       {
@@ -41,24 +43,25 @@
     var scene = new THREE.Scene();
     const gui = new GUI();
 
-    var aspect = window.innerWidth / window.innerHeight;
+    const canvas = document.querySelector('#c');
+
+    const renderer = new THREE.WebGLRenderer(
+      { antialias: true, canvas }
+    );
+
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.setPixelRatio(window.devicePixelRatio);
+    document.body.appendChild(renderer.domElement);
+
     var camera = new THREE.PerspectiveCamera(
       75,
-      aspect,
+      window.innerWidth / window.innerHeight,
       0.1,
       1000
     );
+    
+    camera.updateProjectionMatrix();
     camera.position.set(0, 0, 20);
-
-    var renderer = new THREE.WebGLRenderer({
-      antialias: true,
-    });
-
-    renderer.setSize(
-      window.innerWidth,
-      window.innerHeight
-    );
-    document.body.appendChild(renderer.domElement);
 
     const controls = new OrbitControls(
       camera,
@@ -87,7 +90,7 @@
 
       createGUI() {
         const wallsFolder = this.gui.addFolder('Walls');
-
+        wallsFolder.close()
         wallsFolder.addColor(this.wallsObj, 'leftSide').onChange(() => this.updateColor(this.leftBoardMesh, 'leftSide'));
         wallsFolder.addColor(this.wallsObj, 'rightSide').onChange(() => this.updateColor(this.rightBoardMesh, 'rightSide'));
         wallsFolder.addColor(this.wallsObj, 'FrontSide').onChange(() => this.updateColor(this.frontBoardMesh, 'FrontSide'));
@@ -141,10 +144,10 @@
         const folder = this.gui.addFolder('Lights');
 
         this.lights.forEach(light => {
-          if (light instanceof THREE.DirectionalLight) {
-            this.addDirectionalLightControls(light, folder);
-          } else if (light instanceof THREE.PointLight) {
+          if (light instanceof THREE.PointLight) {
             this.addPointLightControls(light, folder);
+          } else if (light instanceof THREE.DirectionalLight) {
+            this.addDirectionalLightControls(light, folder);
           } else if (light instanceof THREE.SpotLight) {
             this.addSpotLightControls(light, folder);
           } else if (light instanceof THREE.HemisphereLight) {
@@ -152,6 +155,37 @@
           }
           scene.add(light);
         });
+      }
+
+      addPointLightControls(light, folder) {
+        const lightFolder = folder.addFolder('Point Light');
+        this.enableControls.pointLight = true;
+        this.helperControls.pointLight = true;
+
+        const toggleHelper = (value, isShowHelper) => {
+          if (value && isShowHelper) {
+            scene.add(lightHelper);
+          } else {
+            scene.remove(lightHelper);
+          }
+        };
+
+        lightFolder.add(this.enableControls, 'pointLight').name('Enable').onChange(value => {
+          light.visible = value;
+          toggleHelper(value, this.helperControls.pointLight)
+        });
+        lightFolder.add(this.helperControls, 'pointLight').name('Helper').onChange(value => {
+          toggleHelper(value, value);
+          this.helperControls.pointLight = value;
+        });
+
+        lightFolder.addColor(light, 'color').onChange(() => light.color = new THREE.Color(light.color));
+        lightFolder.add(light, 'intensity', 0, 150, 1);
+        lightFolder.add(light, 'distance', 0, 24, 0.1)
+        lightFolder.add(light, 'decay', 0, 4, 0.1);
+        lightFolder.add(light.position, 'x', -6, 6);
+        lightFolder.add(light.position, 'y', -5, 5);
+        lightFolder.add(light.position, 'z', 0, 8);
       }
 
       addDirectionalLightControls(light, folder) {
@@ -178,40 +212,9 @@
         });
         lightFolder.addColor(light, 'color').onChange(() => light.color = new THREE.Color(light.color));
         lightFolder.add(light, 'intensity', 0, 2, 0.01);
-        lightFolder.add(light.position, 'x', -10, 10);
-        lightFolder.add(light.position, 'y', -10, 10);
-        lightFolder.add(light.position, 'z', -10, 10);
-      }
-
-      addPointLightControls(light, folder) {
-        const lightFolder = folder.addFolder('Point Light');
-        this.enableControls.pointLight = true;
-        this.helperControls.pointLight = false;
-
-        const toggleHelper = (value, isShowHelper) => {
-          if (value && isShowHelper) {
-            scene.add(lightHelper);
-          } else {
-            scene.remove(lightHelper);
-          }
-        };
-
-        lightFolder.add(this.enableControls, 'pointLight').name('Enable').onChange(value => {
-          light.visible = value;
-          toggleHelper(value, this.helperControls.pointLight)
-        });
-        lightFolder.add(this.helperControls, 'pointLight').name('Helper').onChange(value => {
-          toggleHelper(value, value);
-          this.helperControls.pointLight = value;
-        });
-
-        lightFolder.addColor(light, 'color').onChange(() => light.color = new THREE.Color(light.color));
-        lightFolder.add(light, 'intensity', 0, 150, 1);
         lightFolder.add(light.position, 'x', -6, 6);
         lightFolder.add(light.position, 'y', -5, 5);
         lightFolder.add(light.position, 'z', 0, 8);
-        lightFolder.add(light, 'distance', 0, 24, 0.1)
-        lightFolder.add(light, 'decay', 0, 4, 0.1);
       }
 
       addSpotLightControls(light, folder) {
@@ -244,11 +247,11 @@
 
         lightFolder.addColor(light, 'color').onChange(() => light.color = new THREE.Color(light.color));
         lightFolder.add(light, 'intensity', 0, 150, 1);
-        lightFolder.add(light.position, 'x', -10, 10);
-        lightFolder.add(light.position, 'y', -10, 10);
-        lightFolder.add(light.position, 'z', -10, 10);
         lightFolder.add(light, 'distance', 0, 24, 0.1)
         lightFolder.add(light, 'decay', 0, 4, 0.1);
+        lightFolder.add(light.position, 'x', -6, 6);
+        lightFolder.add(light.position, 'y', -5, 5);
+        lightFolder.add(light.position, 'z', 0, 8);
       }
 
       addHemisphereLightControls(light, folder) {
@@ -265,30 +268,26 @@
         lightFolder.addColor(light, 'skyColor').onChange(() => light.color = new THREE.Color(light.color));
         lightFolder.addColor(light, 'groundColor').onChange(() => light.groundColor = new THREE.Color(light.groundColor));
         lightFolder.add(light, 'intensity', 0, 150, 1);
-        lightFolder.add(light.position, 'x', -10, 10);
-        lightFolder.add(light.position, 'y', -10, 10);
-        lightFolder.add(light.position, 'z', -10, 10);
+        lightFolder.add(light.position, 'x', -6, 6);
+        lightFolder.add(light.position, 'y', -5, 5);
+        lightFolder.add(light.position, 'z', 0, 8);
       }
     }
     // Ambient Light
-    const ambientLight = new THREE.AmbientLight(0xffffff, 0.05);
+    const ambientLight = new THREE.AmbientLight(0xffffff, 0.5);
     scene.add(ambientLight);
+
+    // Point Light
+    const pointLight = new THREE.PointLight(0xffffff, 20, 20, 2);
+    pointLight.position.set(0, 0, 4);
+
+    const lightHelper = new THREE.PointLightHelper(pointLight, 1);
+    scene.add(lightHelper);
 
     // Directional Light
     const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
     directionalLight.position.set(0, 4, 4);
-    directionalLight.target.position.set(0, 0, 4);
-
-
-    // Point Light
-    const pointLight = new THREE.PointLight(0xffffff, 1, 100);
-    pointLight.position.set(0, 0, 4);
-    pointLight.intensity = 20;
-    pointLight.distance = 16;
-    pointLight.decay = 2;
-
-    const lightHelper = new THREE.PointLightHelper(pointLight, 1);
-    scene.add(lightHelper);
+    // directionalLight.target.position.set(0, 0, 4);
 
     // Spot Light
     const spotLight = new THREE.SpotLight(0xffffff, 1);
