--- a/Three.js/practical_work_2/PW2_ex4.html
+++ b/Three.js/practical_work_2/PW2_ex4.html
@@ -23,6 +23,8 @@
 </head>
 
 <body>
+  <canvas id="c"></canvas>
+
   <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
   <script type="importmap">
       {
@@ -41,25 +43,25 @@
     var scene = new THREE.Scene();
     const gui = new GUI();
 
-    var aspect = window.innerWidth / window.innerHeight;
+    const canvas = document.querySelector('#c');
+
+    const renderer = new THREE.WebGLRenderer(
+      { antialias: true, canvas }
+    );
+
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.setPixelRatio(window.devicePixelRatio);
+    document.body.appendChild(renderer.domElement);
+
     var camera = new THREE.PerspectiveCamera(
       75,
-      aspect,
+      window.innerWidth / window.innerHeight,
       0.1,
       1000
     );
+    
+    camera.updateProjectionMatrix();
     camera.position.set(0, 0, 15);
-
-    var renderer = new THREE.WebGLRenderer({
-      antialias: true,
-    });
-
-    renderer.setSize(
-      window.innerWidth,
-      window.innerHeight
-    );
-
-    document.body.appendChild(renderer.domElement);
 
     const controls = new OrbitControls(
       camera,
@@ -144,51 +146,20 @@
         folder.close();
 
         this.lights.forEach(light => {
-          if (light instanceof THREE.DirectionalLight) {
-            scene.add(light);
-            light.visible = false;
-            this.addDirectionalLightControls(light, folder);
-          } else if (light instanceof THREE.PointLight) {
+          if (light instanceof THREE.PointLight) {
             this.addPointLightControls(light, folder);
+          } else if (light instanceof THREE.DirectionalLight) {
+            this.addDirectionalLightControls(light, folder);
+            light.visible = false;
           } else if (light instanceof THREE.SpotLight) {
-            scene.add(light);
-            light.visible = false;
             this.addSpotLightControls(light, folder);
-          } else if (light instanceof THREE.HemisphereLight) {
-            scene.add(light);
             light.visible = false;
+          } else if (light instanceof THREE.HemisphereLight) {
             this.addHemisphereLightControls(light, folder);
+            light.visible = false;
           }
+          scene.add(light);
         });
-      }
-
-      addDirectionalLightControls(light, folder) {
-        const lightFolder = folder.addFolder('Directional Light');
-        const helper = new THREE.DirectionalLightHelper(light);
-        this.enableControls.directionalLight = false;
-        this.helperControls.directionalLight = false;
-
-        const toggleHelper = (value, isShowHelper) => {
-          if (value && isShowHelper) {
-            scene.add(helper);
-          } else {
-            scene.remove(helper);
-          }
-        };
-
-        lightFolder.add(this.enableControls, 'directionalLight').name('Enable').onChange(value => {
-          light.visible = value;
-          toggleHelper(value, this.helperControls.directionalLight)
-        });
-        lightFolder.add(this.helperControls, 'directionalLight').name('Helper').onChange(value => {
-          toggleHelper(value, value);
-          this.helperControls.directionalLight = value;
-        });
-        lightFolder.addColor(light, 'color').onChange(() => light.color = new THREE.Color(light.color));
-        lightFolder.add(light, 'intensity', 0, 2, 0.01);
-        lightFolder.add(light.position, 'x', -10, 10);
-        lightFolder.add(light.position, 'y', -10, 10);
-        lightFolder.add(light.position, 'z', -10, 10);
       }
 
       addPointLightControls(light, folder) {
@@ -215,15 +186,46 @@
 
         lightFolder.addColor(light, 'color').onChange(() => light.color = new THREE.Color(light.color));
         lightFolder.add(light, 'intensity', 0, 150, 1);
+        lightFolder.add(light, 'distance', 0, 24, 0.1)
+        lightFolder.add(light, 'decay', 0, 4, 0.1);
         lightFolder.add(light.position, 'x', -6, 6);
         lightFolder.add(light.position, 'y', -5, 5);
         lightFolder.add(light.position, 'z', 0, 8);
-        lightFolder.add(light, 'distance', 0, 24, 0.1)
-        lightFolder.add(light, 'decay', 0, 4, 0.1);
+      }
+
+      addDirectionalLightControls(light, folder) {
+        const lightFolder = folder.addFolder('Directional Light');
+        lightFolder.close();
+        const helper = new THREE.DirectionalLightHelper(light);
+        this.enableControls.directionalLight = false;
+        this.helperControls.directionalLight = false;
+
+        const toggleHelper = (value, isShowHelper) => {
+          if (value && isShowHelper) {
+            scene.add(helper);
+          } else {
+            scene.remove(helper);
+          }
+        };
+
+        lightFolder.add(this.enableControls, 'directionalLight').name('Enable').onChange(value => {
+          light.visible = value;
+          toggleHelper(value, this.helperControls.directionalLight)
+        });
+        lightFolder.add(this.helperControls, 'directionalLight').name('Helper').onChange(value => {
+          toggleHelper(value, value);
+          this.helperControls.directionalLight = value;
+        });
+        lightFolder.addColor(light, 'color').onChange(() => light.color = new THREE.Color(light.color));
+        lightFolder.add(light, 'intensity', 0, 2, 0.01);
+        lightFolder.add(light.position, 'x', -6, 6);
+        lightFolder.add(light.position, 'y', -5, 5);
+        lightFolder.add(light.position, 'z', 0, 8);
       }
 
       addSpotLightControls(light, folder) {
         const lightFolder = folder.addFolder('Spot Light');
+        lightFolder.close();
         const helper = new THREE.SpotLightHelper(light);
         this.enableControls.spotLight = false;
         this.helperControls.spotLight = false;
@@ -252,15 +254,16 @@
 
         lightFolder.addColor(light, 'color').onChange(() => light.color = new THREE.Color(light.color));
         lightFolder.add(light, 'intensity', 0, 150, 1);
-        lightFolder.add(light.position, 'x', -10, 10);
-        lightFolder.add(light.position, 'y', -10, 10);
-        lightFolder.add(light.position, 'z', -10, 10);
         lightFolder.add(light, 'distance', 0, 24, 0.1)
         lightFolder.add(light, 'decay', 0, 4, 0.1);
+        lightFolder.add(light.position, 'x', -6, 6);
+        lightFolder.add(light.position, 'y', -5, 5);
+        lightFolder.add(light.position, 'z', 0, 8);
       }
 
       addHemisphereLightControls(light, folder) {
         const lightFolder = folder.addFolder('Hemisphere Light');
+        lightFolder.close();
         this.enableControls.hemisphereLight = false;
         lightFolder.add(this.enableControls, 'hemisphereLight').name('Enable').onChange(value => {
           light.visible = value;
@@ -273,30 +276,26 @@
         lightFolder.addColor(light, 'skyColor').onChange(() => light.color = new THREE.Color(light.color));
         lightFolder.addColor(light, 'groundColor').onChange(() => light.groundColor = new THREE.Color(light.groundColor));
         lightFolder.add(light, 'intensity', 0, 150, 1);
-        lightFolder.add(light.position, 'x', -10, 10);
-        lightFolder.add(light.position, 'y', -10, 10);
-        lightFolder.add(light.position, 'z', -10, 10);
+        lightFolder.add(light.position, 'x', -6, 6);
+        lightFolder.add(light.position, 'y', -5, 5);
+        lightFolder.add(light.position, 'z', 0, 8);
       }
     }
     // Ambient Light
-    const ambientLight = new THREE.AmbientLight(0xffffff, 0.2);
+    const ambientLight = new THREE.AmbientLight(0xffffff, 0.5);
     scene.add(ambientLight);
+
+    // Point Light
+    const pointLight = new THREE.PointLight(0xffffff, 20, 20, 2);
+    pointLight.position.set(0, 0, 4);
+
+    const lightHelper = new THREE.PointLightHelper(pointLight, 1);
+    scene.add(lightHelper);
 
     // Directional Light
     const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
     directionalLight.position.set(0, 4, 4);
     directionalLight.target.position.set(0, 0, 4);
-
-    // Point Light
-    const pointLight = new THREE.PointLight(0xffffff, 1, 100);
-    pointLight.position.set(0, 0, 4);
-    pointLight.intensity = 20;
-    pointLight.distance = 16;
-    pointLight.decay = 2;
-    scene.add(pointLight);
-
-    const lightHelper = new THREE.PointLightHelper(pointLight, 1);
-    scene.add(lightHelper);
 
     // Spot Light
     const spotLight = new THREE.SpotLight(0xffffff, 1);
@@ -317,6 +316,11 @@
 
     // Common Material GUI Controller
     const materialFolder = gui.addFolder('Material');
+    const textureLoader = new THREE.TextureLoader();
+    let textureEquirec;
+    textureEquirec = textureLoader.load('2294472375_24a3b8ef46_o.jpg');
+    textureEquirec.mapping = THREE.EquirectangularReflectionMapping;
+    textureEquirec.colorSpace = THREE.SRGBColorSpace;
     const cornTexture = new THREE.TextureLoader().load('corn.jpeg');
     const reflectionMapTexture = new THREE.TextureLoader().load('hologram.jpeg');
     const refractionMapTexture = new THREE.TextureLoader().load('night-city.webp');
@@ -339,7 +343,7 @@
       }
 
       createGUI() {
-        const folder = materialFolder.addFolder('Common'); 
+        const folder = materialFolder.addFolder('Common');
         folder.close();
 
         folder.add(this.commonMaterialParams, 'flatShading').onChange(value => {
@@ -394,7 +398,9 @@
 
         this.lambertMaterialParams = {
           color: 0x3ff7c3,
-          emissive: 0x000000,
+          emissive: 0xffffff,
+          emissiveMap: 'none',
+          emissiveIntensity: 1,
           vertexColors: false,
           envMaps: 'none',
           map: 'none',
@@ -425,19 +431,42 @@
           });
         });
 
+        folder.add(this.lambertMaterialParams, 'emissiveMap', ['none', 'house']).onChange(value => {
+          const map = value === 'none' ? null : value === 'house' ? textureEquirec : null;
+          this.meshes.forEach(mesh => {
+            mesh.material.emissiveMap = map;
+            mesh.material.needsUpdate = true;
+          });
+        });
+
+        folder.add(this.lambertMaterialParams, 'emissiveIntensity', 0, 10).onChange(value => {
+          this.meshes.forEach(mesh => {
+            mesh.material.emissiveIntensity = value;
+            mesh.material.needsUpdate = true;
+          });
+        });
+
         folder.add(this.lambertMaterialParams, 'vertexColors').onChange(value => {
           this.meshes.forEach(mesh => {
             mesh.material.vertexColors = value;
+            mesh.material.emissive.set(0xffffff);
             mesh.material.needsUpdate = true;
           });
         });
 
         folder.add(this.lambertMaterialParams, 'envMaps', ['none', 'reflection', 'refraction']).onChange(value => {
-          const envMaps = value === 'none' ? null : value === 'reflection' ? reflectionMapTexture : refractionMapTexture;
-
-          console.log(envMaps)
+          if (value === 'refraction') {
+            textureEquirec.mapping = THREE.EquirectangularRefractionMapping;
+          } else if (value === 'reflection') {
+            textureEquirec.mapping = THREE.EquirectangularReflectionMapping;
+          } else {
+          }
           this.meshes.forEach(mesh => {
-            mesh.material.envMap = envMaps;
+            if (value === 'none') {
+              mesh.material.envMap = null;
+            } else {
+              mesh.material.envMap = textureEquirec;
+            }
             mesh.material.needsUpdate = true;
           });
         });
@@ -447,6 +476,7 @@
           this.meshes.forEach(mesh => {
             mesh.material.map = map;
             mesh.material.color.set(0xf4eceb);
+            mesh.material.emissive.set(0x000000);
             mesh.material.needsUpdate = true;
           });
         });
@@ -490,7 +520,9 @@
 
         this.phongMaterialParams = {
           color: 0xf02e21,
-          emissive: 0x000000,
+          emissive: 0xa55f5f,
+          emissiveMap: 'none',
+          emissiveIntensity: 10,
           specular: 0x111111,
           shininess: 30,
           envMaps: 'none',
@@ -522,6 +554,22 @@
           });
         });
 
+        folder.add(this.phongMaterialParams, 'emissiveMap', ['none', 'house']).onChange(value => {
+          const map = value === 'none' ? null : value === 'house' ? textureEquirec : null;
+          this.meshes.forEach(mesh => {
+            mesh.material.emissiveMap = map;
+            mesh.material.needsUpdate = true;
+          });
+        });
+
+        folder.add(this.phongMaterialParams, 'emissiveIntensity', 0, 50).onChange(value => {
+          this.meshes.forEach(mesh => {
+            mesh.material.emissiveIntensity = value;
+            mesh.material.emissive.set(0xa55f5f),
+            mesh.material.needsUpdate = true;
+          });
+        });
+
         folder.addColor(this.phongMaterialParams, 'specular').onChange(value => {
           this.meshes.forEach(mesh => {
             mesh.material.specular.set(value);
@@ -537,9 +585,18 @@
         });
 
         folder.add(this.phongMaterialParams, 'envMaps', ['none', 'reflection', 'refraction']).name('Env Maps').onChange(value => {
-          const envMaps = value === 'none' ? null : value === 'reflection' ? reflectionMapTexture : refractionMapTexture;
+          if (value === 'refraction') {
+            textureEquirec.mapping = THREE.EquirectangularRefractionMapping;
+          } else if (value === 'reflection') {
+            textureEquirec.mapping = THREE.EquirectangularReflectionMapping;
+          } else {
+          }
           this.meshes.forEach(mesh => {
-            mesh.material.envMap = envMaps;
+            if (value === 'none') {
+              mesh.material.envMap = null;
+            } else {
+              mesh.material.envMap = textureEquirec;
+            }
             mesh.material.needsUpdate = true;
           });
         });
@@ -593,7 +650,7 @@
 
         this.physicalMaterialParams = {
           color: 0x6699ff,
-          emissive: 0x000000,
+          emissive: 0xf1a91a,
           roughness: 0.5,
           metalness: 0.5,
           ior: 1.5,
@@ -602,6 +659,7 @@
           iridescenceIOR: 1.5,
           sheen: 0,
           sheenRoughness: 0,
+          sheenRoughnessMap: 'none',
           sheenColor: 0xffffff,
           clearcoat: 0,
           clearcoatRoughness: 0,
@@ -610,9 +668,6 @@
           envMaps: 'none',
           map: 'none',
           roughnessMap: 'none',
-          alphaMap: 'none',
-          metalnessMap: 'none',
-          iridescenceMap: 'none'
         };
 
         this.createPhysicalGUI();
@@ -692,6 +747,14 @@
           });
         });
 
+        folder.add(this.physicalMaterialParams, 'sheenRoughnessMap', ['none', 'house']).onChange(value => {
+          const map = value === 'none' ? null : value === 'house' ? textureEquirec : null;
+          this.meshes.forEach(mesh => {
+            mesh.material.sheenRoughnessMap = map;
+            mesh.material.needsUpdate = true;
+          });
+        });
+
         folder.addColor(this.physicalMaterialParams, 'sheenColor').onChange(value => {
           this.meshes.forEach(mesh => {
             mesh.material.sheenColor.set(value);
@@ -728,9 +791,18 @@
         });
 
         folder.add(this.physicalMaterialParams, 'envMaps', ['none', 'reflection', 'refraction']).name('Env Maps').onChange(value => {
-          const envMaps = value === 'none' ? null : value === 'reflection' ? reflectionMapTexture : refractionMapTexture;
+          if (value === 'refraction') {
+            textureEquirec.mapping = THREE.EquirectangularRefractionMapping;
+          } else if (value === 'reflection') {
+            textureEquirec.mapping = THREE.EquirectangularReflectionMapping;
+          } else {
+          }
           this.meshes.forEach(mesh => {
-            mesh.material.envMap = envMaps;
+            if (value === 'none') {
+              mesh.material.envMap = null;
+            } else {
+              mesh.material.envMap = textureEquirec;
+            }
             mesh.material.needsUpdate = true;
           });
         });
@@ -743,48 +815,12 @@
             mesh.material.needsUpdate = true;
           });
         });
-
-        folder.add(this.physicalMaterialParams, 'roughnessMap', ['none', 'corn']).onChange(value => {
-          const map = value === 'none' ? null : value === 'corn' ? cornTexture : null;
-          this.meshes.forEach(mesh => {
-            mesh.material.roughnessMap = map;
-            mesh.material.color.set(0xf4eceb);
-            mesh.material.needsUpdate = true;
-          });
-        });
-
-        folder.add(this.physicalMaterialParams, 'alphaMap', ['none', 'corn']).onChange(value => {
-          const map = value === 'none' ? null : value === 'corn' ? cornTexture : null;
-          this.meshes.forEach(mesh => {
-            mesh.material.alphaMap = map;
-            mesh.material.color.set(0xf4eceb);
-            mesh.material.needsUpdate = true;
-          });
-        });
-
-        folder.add(this.physicalMaterialParams, 'metalnessMap', ['none', 'corn']).onChange(value => {
-          const map = value === 'none' ? null : value === 'corn' ? cornTexture : null;
-          this.meshes.forEach(mesh => {
-            mesh.material.metalnessMap = map;
-            mesh.material.color.set(0xf4eceb);
-            mesh.material.needsUpdate = true;
-          });
-        });
-
-        folder.add(this.physicalMaterialParams, 'iridescenceMap', ['none', 'corn']).onChange(value => {
-          const map = value === 'none' ? null : value === 'corn' ? cornTexture : null;
-          this.meshes.forEach(mesh => {
-            mesh.material.iridescenceMap = map;
-            mesh.material.color.set(0xf4eceb);
-            mesh.material.needsUpdate = true;
-          });
-        });
       }
     }
 
     // AXES helper
-    const axesHelper = new THREE.AxesHelper(100);
-    scene.add(axesHelper);
+    // const axesHelper = new THREE.AxesHelper(100);
+    // scene.add(axesHelper);
 
     // Walls Front
     const frontBoardGeometry = new THREE.PlaneGeometry(12, 10);
@@ -851,7 +887,7 @@
     const phongMaterialControls = new PhongMaterialControls(gui, [cylinderMesh]);
     const physicalMaterialControls = new PhysicalMaterialControls(gui, [sphereMesh]);
 
-    gui.close();
+    // gui.close();
 
     function createMesh(geometry, color, x, y, z, sideView, rotationX, rotationY, rotationZ) {
       const material = new THREE.MeshPhysicalMaterial({
@@ -877,7 +913,7 @@
       return mesh;
     }
 
-    function resizeRendererToDisplaySize(renderer) {      
+    function resizeRendererToDisplaySize(renderer) {
       const canvas = renderer.domElement;
       const width = canvas.clientWidth;
       const height = canvas.clientHeight;
@@ -887,7 +923,7 @@
       if (needResize) {
         renderer.setSize(width, height, false);
       }
-      
+
       return needResize;
     }
 
