--- a/visualizeColorFromVideoInVR/video_html_data/video-wg2.html
+++ b/visualizeColorFromVideoInVR/video_html_data/video-wg2.html
@@ -49,6 +49,27 @@
 		}
 	</script>
 
+  <script type="x-shader/x-vertex" id="ShadowVertexShader">
+    uniform sampler2D tex;
+    varying vec3 color;
+
+    void main() {
+      color = texture2D(tex, position.xy).rgb;
+      gl_PointSize = 1.0;
+      gl_Position = projectionMatrix * modelViewMatrix * vec4(color.x, 0.0, color.z, 1.0);
+    }
+  </script>
+
+  <script type="x-shader/x-fragment" id="ShadowFragmentShader">
+    varying vec3 color;
+    out vec4 out_FragColor;
+
+    void main() {
+      out_FragColor.rgb = vec3(0.0, 0.0, 0.0); // Color the fragment uniformly
+      out_FragColor.a = 1.0; //opacity
+    }
+  </script>
+
   <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
   <script type="importmap">
     {
@@ -150,7 +171,18 @@
             tex: { value: videoTexture },
           }
         });
-        let discret = 1;
+
+        // Shadow Space Material
+        var shadowSpaceMaterial = new THREE.ShaderMaterial({
+          vertexShader: document.getElementById('ShadowVertexShader').textContent,
+          fragmentShader: document.getElementById('ShadowFragmentShader').textContent,
+          glslVersion: THREE.GLSL3,
+          uniforms: {
+            tex: { value: videoTexture },
+          }
+        });
+
+        let discret = 10;
         const geometry = new THREE.BufferGeometry();
         const positions = [];
         let compteur = 0;
@@ -165,11 +197,18 @@
             positions.push(x, y, z);
             compteur++;
           }
+
         geometry.setAttribute('position', new THREE.Float32BufferAttribute(positions, 3));
         geometry.computeBoundingSphere();
         const points = new THREE.Points(geometry, colorSpaceMaterial);
         points.position.z = 0;
         scene.add(points);
+
+        // Shadow Space Points
+        const shadowSpacePoints = new THREE.Points(geometry, shadowSpaceMaterial);
+        shadowSpacePoints.position.set(-0.5, -0.5, -0.5);
+        scene.add(shadowSpacePoints);
+
         // AXES HELPER
         var axesHelper = new THREE.AxesHelper();
         axesHelper.isLineSegments = true;
