remove last modified time

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <header style="text-align: center">
     <h1>Real-time 3D Visualization</h1>
     <p>Author: Phung Quang Huy</p>
-    <p>Last Modified: <span id="lastModified"></span></p>
+    <!-- <p>Last Modified: <span id="lastModified"></span></p> -->
   </header>
   <section id="practicalWork1">
     <h2>Practical Work #1</h2>
